tests/files/flow_controller_tests/should_run/028.cmdr
x = parseInt("3");
print x;