tests/files/flow_controller_tests/should_fail/035.cmdr
x = "cat"
print ceil(x);